k8s/prometheus-configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
