k8s/app.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name : app-api
  namespace : devops-project 
spec:
  selector:
    matchLabels:
      app: devops-project
  template:
    metadata:
      labels:
        app: devops-project
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: app
          image: ghcr.io/thanutgit/devopsminiproject:VERSION
          ports:
            - containerPort: 3010
          livenessProbe:
            httpGet:
              path: /livez
              port: 3010
            initialDelaySeconds: 10
            periodSeconds:  15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3010
            initialDelaySeconds: 5
            periodSeconds:  10
            failureThreshold: 3
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "100m"
---
apiVersion : v1
kind: Service
metadata:
  name: app-service
  namespace: devops-project
spec:
  selector:
    app: devops-project
  ports:
    - port: 3020
      targetPort: 3010
  type: ClusterIP
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
